<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ashot</groupId>
    <artifactId>shellflow</artifactId>
    <version>0.6.5</version>
    <name>shellflow</name>

    <properties>
        <output.artifact>${project.name}</output.artifact>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>24.0.2</javafx.version>
        <jeditermfx.version>1.2.0-SNAPSHOT</jeditermfx.version>
        <atlantafx.themes.version>2.1.0</atlantafx.themes.version>
        <controlsfx.version>11.2.2</controlsfx.version>
        <logback.version>1.5.18</logback.version>
        <json.version>20240303</json.version>
        <junit.version>5.10.2</junit.version>
        <testfx.version>4.0.18</testfx.version>
        <mockito.version>5.16.1</mockito.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <!--
                todo consider adding
                <dependency>
                    <groupId>com.techsenger.tabpanepro</groupId>
                    <artifactId>tabpanepro-core</artifactId>
                    <version>${tabpanepro.version}</version>
                </dependency>
        -->
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>${atlantafx.themes.version}</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.11.5</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${controlsfx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.techsenger.jeditermfx</groupId>
            <artifactId>jeditermfx-core</artifactId>
            <version>${jeditermfx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.techsenger.jeditermfx</groupId>
            <artifactId>jeditermfx-ui</artifactId>
            <version>${jeditermfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>24</source>
                    <target>24</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <outputDirectory>target/mods</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${project.build.directory}/mods</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${project.basedir}/output</directory>
                            <includes>
                                <!--delete app image folder-->
                                <include>${output.artifact}-${project.version}/**</include>
                                <!--delete installer-->
                                <include>${output.artifact}-${project.version}.exe</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.4</version>
                <configuration>
                    <appVersion>${project.version}</appVersion>
                    <vendor>org.ashot</vendor>
                    <!--this includes the full jdk runtime, allows for automatic modules but increases exe file size by alot-->
                    <runtimeImage>${java.home}</runtimeImage>
                    <module>org.ashot.shellflow/org.ashot.shellflow.Main</module>
                    <modulePaths>
                        <modulePath>target/mods</modulePath>
                    </modulePaths>
                    <destination>output</destination>
                    <javaOptions>
                        <option>--enable-preview</option>
                        <option>-Dfile.encoding=UTF-8</option>
                    </javaOptions>
                    <icon>${project.basedir}/src/main/resources/icon.ico</icon>
                </configuration>
                <executions>
                    <execution>
                        <id>windows</id>
                        <configuration>
                            <name>${output.artifact}</name>
                            <winDirChooser>true</winDirChooser>
                            <winShortcut>true</winShortcut>
                            <winMenu>true</winMenu>
                            <winShortcutPrompt>true</winShortcutPrompt>
                            <winUpgradeUuid>4b728778-c894-4fd0-84f2-16165f90f951</winUpgradeUuid>
                            <type>EXE</type>
                        </configuration>
                    </execution>
                    <execution>
                        <id>app-image</id>
                        <configuration>
                            <name>${output.artifact}-${project.version}</name>
                            <type>APP_IMAGE</type>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>